--- a/src/main/resources/fxml/home/home.fxml
+++ b/src/main/resources/fxml/home/home.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.cus.fx.home.controller.HomeController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="-Infinity" prefWidth="-Infinity" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.cus.fx.home.controller.HomeController">
    <children>
-      <VBox prefHeight="615.0" prefWidth="89.0" style="-fx-background-color: #ccc;">
+      <VBox prefHeight="-Infinity" prefWidth="89.0" style="-fx-background-color: #ccc;">
          <children>
             <Button fx:id="logout_button" mnemonicParsing="false" onAction="#logout" prefHeight="31.0" prefWidth="94.0" styleClass="logout_button" text="注销" />
             <Button mnemonicParsing="false" onAction="#spgl" prefHeight="23.0" prefWidth="97.0" styleClass="menus" text="商品管理">
@@ -29,6 +29,6 @@
             </Button>
          </children>
       </VBox>
-      <Pane fx:id="bodys" layoutX="90.0" prefHeight="615.0" prefWidth="922.0" style="-fx-background-color: #ccc;" />
+      <Pane fx:id="bodys" layoutX="90.0" prefHeight="-Infinity" prefWidth="-Infinity" style="-fx-background-color: #ccc;" />
    </children>
 </Pane>
