--- a/src/main/resources/fxml/home/home.fxml
+++ b/src/main/resources/fxml/home/home.fxml
@@ -20,8 +20,8 @@
                   <Insets top="10.0" />
                </VBox.margin>
             </Button>
-            <Button mnemonicParsing="false" onAction="#ddgl" prefHeight="23.0" prefWidth="97.0" styleClass="menus" text="最新订单">
-            </Button>
+            <Button mnemonicParsing="false" onAction="#ddgl" prefHeight="23.0" prefWidth="97.0" styleClass="menus" text="最新订单"/>
+            <Button mnemonicParsing="false" onAction="#ddgl2" prefHeight="23.0" prefWidth="97.0" styleClass="menus" text="订单管理"/>
             <Button mnemonicParsing="false" onAction="#grzl" prefHeight="23.0" prefWidth="96.0" styleClass="menus" text="个人资料">
                <VBox.margin>
                   <Insets top="1.0" />
