修改大部分按钮样式

--- a/src/main/resources/css/home/home.css
+++ b/src/main/resources/css/home/home.css
@@ -2,13 +2,15 @@
     /*-fx-background-image: url("../img/backgroup.gif") no-repeat left center;
     -fx-background-size:cover;*/
 }
-button{
+.logout_button{
     -fx-color:red;
     /*设置圆角*/
     -fx-background-radius: 0;
     -fx-border-radius: 0;
 }
 .menus{
+    -fx-background-image: url("../../image/button.jpg") no-repeat left center;
+    -fx-background-size:cover;
     /*设置圆角*/
     -fx-background-radius: 0;
     -fx-border-radius: 0;
