--- a/src/main/resources/fxml/index.fxml
+++ b/src/main/resources/fxml/index.fxml
@@ -42,6 +42,11 @@
                                         <Insets top="20.0" />
                                     </VBox.margin>
                                     <children>
+                                        <Button mnemonicParsing="false" onAction="#register" text="注册">
+                                            <HBox.margin>
+                                                <Insets right="15.0" />
+                                            </HBox.margin>
+                                        </Button>
                                         <Button mnemonicParsing="false" text="忘记密码">
                                             <HBox.margin>
                                                 <Insets right="15.0" />
