--- a/src/main/resources/fxml/index.fxml
+++ b/src/main/resources/fxml/index.fxml
@@ -20,13 +20,13 @@
                             <children>
                                 <HBox prefHeight="32.0" prefWidth="289.0">
                                     <children>
-                                        <Label alignment="CENTER_RIGHT" contentDisplay="TOP" prefHeight="30.0" prefWidth="42.0" text="账号：" />
+                                        <Label styleClass="account_label" alignment="CENTER_RIGHT" contentDisplay="TOP" prefHeight="30.0" prefWidth="42.0" text="账号：" />
                                         <TextField fx:id="account" prefHeight="31.0" prefWidth="215.0" />
                                     </children>
                                 </HBox>
                                 <HBox prefHeight="32.0" prefWidth="289.0">
                                     <children>
-                                        <Label alignment="CENTER_RIGHT" contentDisplay="TOP" prefHeight="30.0" prefWidth="42.0" text="密码：">
+                                        <Label styleClass="password_label" alignment="CENTER_RIGHT" contentDisplay="TOP" prefHeight="30.0" prefWidth="42.0" text="密码：">
                                             <HBox.margin>
                                                 <Insets />
                                             </HBox.margin>
@@ -42,22 +42,22 @@
                                         <Insets top="20.0" />
                                     </VBox.margin>
                                     <children>
-                                        <Button mnemonicParsing="false" onAction="#register" text="注册">
+                                        <Button styleClass="menu" mnemonicParsing="false" onAction="#register" text="注册">
                                             <HBox.margin>
                                                 <Insets right="15.0" />
                                             </HBox.margin>
                                         </Button>
-                                        <Button mnemonicParsing="false" text="忘记密码">
+                                        <Button styleClass="menu" mnemonicParsing="false" text="忘记密码">
                                             <HBox.margin>
                                                 <Insets right="15.0" />
                                             </HBox.margin>
                                         </Button>
-                                        <Button mnemonicParsing="false" onAction="#reset" text="重置">
+                                        <Button styleClass="reset" mnemonicParsing="false" onAction="#reset" text="重置">
                                             <HBox.margin>
                                                 <Insets right="15.0" />
                                             </HBox.margin>
                                         </Button>
-                                        <Button fx:id="login_login" mnemonicParsing="false" onAction="#login" text="登录">
+                                        <Button styleClass="menu" fx:id="login_login" mnemonicParsing="false" onAction="#login" text="登录">
                                             <HBox.margin>
                                                 <Insets right="30.0" />
                                             </HBox.margin>
