--- a/src/main/resources/fxml/index.fxml
+++ b/src/main/resources/fxml/index.fxml
@@ -1,74 +1,76 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
 <?import javafx.geometry.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Text?>
-
-<Pane styleClass="index" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.cus.fx.IndexController">
+<Pane styleClass="index" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+      prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="org.cus.fx.IndexController">
     <children>
         <HBox prefHeight="768.0" prefWidth="1024.0">
             <children>
-                <VBox prefHeight="768.0" prefWidth="735.0" />
+                <VBox prefHeight="768.0" prefWidth="735.0"/>
                 <VBox prefHeight="768.0" prefWidth="289.0">
                     <children>
-                        <VBox prefHeight="464.0" prefWidth="289.0" />
+                        <VBox prefHeight="464.0" prefWidth="289.0"/>
                         <VBox prefHeight="305.0" prefWidth="289.0">
                             <children>
                                 <HBox prefHeight="32.0" prefWidth="289.0">
                                     <children>
-                                        <Label styleClass="account_label" alignment="CENTER_RIGHT" contentDisplay="TOP" prefHeight="30.0" prefWidth="42.0" text="账号：" />
-                                        <TextField fx:id="account" prefHeight="31.0" prefWidth="215.0" />
+                                        <Label styleClass="account_label" alignment="CENTER_RIGHT" contentDisplay="TOP"
+                                               prefHeight="30.0" prefWidth="42.0" text="账号："/>
+                                        <TextField fx:id="account" prefHeight="31.0" prefWidth="215.0"/>
                                     </children>
                                 </HBox>
                                 <HBox prefHeight="32.0" prefWidth="289.0">
                                     <children>
-                                        <Label styleClass="password_label" alignment="CENTER_RIGHT" contentDisplay="TOP" prefHeight="30.0" prefWidth="42.0" text="密码：">
+                                        <Label styleClass="password_label" alignment="CENTER_RIGHT" contentDisplay="TOP"
+                                               prefHeight="30.0" prefWidth="42.0" text="密码：">
                                             <HBox.margin>
-                                                <Insets />
+                                                <Insets/>
                                             </HBox.margin>
                                         </Label>
-                                        <PasswordField fx:id="password" onAction="#login" prefHeight="32.0" prefWidth="215.0" />
+                                        <PasswordField fx:id="password" onAction="#login" prefHeight="32.0"
+                                                       prefWidth="215.0"/>
                                     </children>
                                     <VBox.margin>
-                                        <Insets top="5.0" />
+                                        <Insets top="5.0"/>
                                     </VBox.margin>
                                 </HBox>
                                 <HBox alignment="TOP_RIGHT" prefHeight="25.0" prefWidth="289.0">
                                     <VBox.margin>
-                                        <Insets top="20.0" />
+                                        <Insets top="20.0"/>
                                     </VBox.margin>
                                     <children>
-                                        <Button styleClass="menu" mnemonicParsing="false" onAction="#register" text="注册">
+                                        <Button styleClass="menu" mnemonicParsing="false" onAction="#register"
+                                                text="注册">
                                             <HBox.margin>
-                                                <Insets right="15.0" />
+                                                <Insets right="15.0"/>
                                             </HBox.margin>
                                         </Button>
                                         <Button styleClass="menu" mnemonicParsing="false" text="忘记密码">
                                             <HBox.margin>
-                                                <Insets right="15.0" />
+                                                <Insets right="15.0"/>
                                             </HBox.margin>
                                         </Button>
                                         <Button styleClass="reset" mnemonicParsing="false" onAction="#reset" text="重置">
                                             <HBox.margin>
-                                                <Insets right="15.0" />
+                                                <Insets right="15.0"/>
                                             </HBox.margin>
                                         </Button>
-                                        <Button styleClass="menu" fx:id="login_login" mnemonicParsing="false" onAction="#login" text="登录">
+                                        <Button styleClass="menu" fx:id="login_login" mnemonicParsing="false"
+                                                onAction="#login" text="登录">
                                             <HBox.margin>
-                                                <Insets right="30.0" />
+                                                <Insets right="30.0"/>
                                             </HBox.margin>
                                         </Button>
                                     </children>
                                 </HBox>
-                        <Label fx:id="error">
-                           <VBox.margin>
-                              <Insets left="15.0" top="5.0" />
-                           </VBox.margin>
-                        </Label>
+                                <Label fx:id="error">
+                                    <VBox.margin>
+                                        <Insets left="15.0" top="5.0"/>
+                                    </VBox.margin>
+                                </Label>
                             </children>
                         </VBox>
                     </children>
